@@ -1,5 +1,6 @@
 package dev.pjatk.recipeapp.controller;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpHeaders;
@@ -11,14 +12,17 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.net.MalformedURLException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @RestController
 @RequestMapping(ImageController.IMAGES)
 public class ImageController {
 
     protected static final String IMAGES = "/api/v1/images";
-    private final Path root = Paths.get("images");
+    private final Path root;
+
+    public ImageController(@Value("${recipe.app-dir}") String root) {
+        this.root = Path.of(root);
+    }
 
     @GetMapping("/{filename:.+}")
     public ResponseEntity<Resource> getImage(@PathVariable String filename) {
